  windows (wxDialog, wxFrame).
- Fixed memory leak of pending events in wxEvtHandler
- Added wxRadioBox::IsItemEnabled/Shown()
- Added space after list item number in wxHTML.
- Implemented <sub> and <sup> handling in wxHTML (based on patch
  by Sandro Sigala)
- Added caption parameter to wxGetFontFromUser and wxGetColourFromUser.
- Added wxGetMouseState function.

wxMSW:

- wxFileDialog respects absence of wxCHANGE_DIR flag under NT (Brad Anderson).
- Switching page of a hidden notebook doesn't lose focus (Jamie Gadd).
- Removed wxImageList *GetImageList(int) const.
- Fixed MDI context menu problem.
- Removed __WIN95__ define
- Create msw/rcdefs.h in setup.h's directory, which can be included by
  resource files. It containts platform/compiler specific defines (such as
  target cpu) which can be used in #ifs in .rc files.
- Add support for Win64 manifests and VC++ 8 automatic manifests (see the
  wxMSW faq for details).
- New TARGET_CPU=amd64 (or 'ia64') option for the makefile.vc files which
  puts 64-bit builds in their own directory and adds /machine:amd64 or ia64
  to the link command.
- wxStatusBar::GetFieldRect now returns correct values under XP.

wxGTK:

- wxEVT_MENU_CLOSE and wxEVT_MENU_OPENED for popup menus are now generated
- Implemented wxCURSOR_BLANK support
- wxSlider generates all scroll events now and not only wxEVT_SCROLL_THUMBTRACK
- Fixed problem with choice editor in wxGrid whereby the editor
  lost focus when the combobox menu was shown.
- Fixed problem trying to print from a preview, whereby wrong printer
  class was used.
- Worked around pango crashes in strncmp on Solaris 10.

wxMac:

- Fixed problem with clipboard support for custom data flavors.
- Fixed focus handling for generic controls in carbon-cfm.
- Fixed a printing crash bug, for example using File->Print and changing
  Popup from 'Copies & Pages' to e.g. 'Layout'.
- Improved support for help and application menu items.